--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ color: var(--color-ocean);
     background-color: var(--color-navy-blue);
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-office1.png);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 1440px;
@@ -318,8 +318,17 @@ footer {
     justify-content: center;
     gap: 48px 24px;
 }
-.line-1-item:hover{
+.portfolio-link {
+    display: block;
+    outline: transparent;
+}
+.portfolio-link:hover,
+.portfolio-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.line-1-item{
+    padding-bottom: 32px;
 }
 .apps-container {
     padding-left: 16px;
@@ -435,6 +444,7 @@ footer {
     width: 168px;
     height: 88px;
     border-radius: 4px; 
+    outline: transparent;
 }
 .customers-list {
     display: flex;
@@ -444,8 +454,10 @@ footer {
 .customers-icon{
     fill: var(--color-light-slate);
 }
-.customers-link:hover .customers-icon{
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon{
     fill: var(--color-ocean);
+    
 }
 .customers-link:hover,
 .customers-link:focus{
